--- a/k8s-install/k8s-by-kubeadm/1.vm-install.md
+++ b/k8s-install/k8s-by-kubeadm/1.vm-install.md
@@ -71,6 +71,10 @@ Now your VM has two adapters:
 ### Set no password for sudo
 
 ```sh
+sudo vi /etc/sudoers
+```
+Then edit file /etc/sudoers
+```sh
 %sudo ALL=(ALL:ALL) NOPASSWD:ALL
 ```
 
@@ -78,6 +82,6 @@ Now your VM has two adapters:
 
 ```sh
 swapoff -a
-vi /etc/fstab
+sudo vi /etc/fstab
 remove the line with swap keyword
 ```
