--- a/k8s-install/k8s-by-kubeadm/3.k8s-install.md
+++ b/k8s-install/k8s-by-kubeadm/3.k8s-install.md
@@ -33,18 +33,21 @@ deb https://mirrors.aliyun.com/kubernetes/apt kubernetes-xenial main
 EOF
 ```
 
-### Update apt package index, install kubelet, kubeadm and kubectl
+### Update apt package index, install kubelet, kubeadm and kubectl (Version 1.22.2-00)
 
 ```shell
 $ sudo apt-get update
-$ sudo apt-get install -y kubelet kubeadm kubectl
+$ sudo apt install -y kubeadm=1.22.2-00 kubelet=1.22.2-00 kubectl=1.22.2-00
 $ sudo apt-mark hold kubelet kubeadm kubectl
 ```
 
 ### kubeadm init
 ```shell
-$ echo "192.168.34.2 cncamp.com" >> /etc/hosts
+$ sudo -
+(root) echo "192.168.34.2 cncamp.com" >> /etc/hosts
+exit
 ```
+
 
 ```shell
 $ kubeadm init \
