--- a/k8s-install/k8s-by-kubeadm/2.docker-install.md
+++ b/k8s-install/k8s-by-kubeadm/2.docker-install.md
@@ -1,16 +1,16 @@
 ### Install docker
 
 ```sh
-apt install docker.io
+sudo apt install docker.io
 ```
 
 ### Update cgroupdriver to systemd
 
 ```sh
-vi /etc/docker/daemon.json
+sudo vi /etc/docker/daemon.json
 {
   "exec-opts": ["native.cgroupdriver=systemd"]
 }
-systemctl daemon-reload
-systemctl restart docker
+sudo systemctl daemon-reload
+sudo systemctl restart docker
 ```
