--- a/k8s-install/k8s-by-kubeadm/3.k8s-install.md
+++ b/k8s-install/k8s-by-kubeadm/3.k8s-install.md
@@ -50,7 +50,7 @@ exit
 
 
 ```shell
-$ kubeadm init \
+$ sudo kubeadm init \
  --image-repository registry.aliyuncs.com/google_containers \
  --kubernetes-version v1.22.2 \
  --pod-network-cidr=192.168.0.0/16 \
