--- a/k8s-install/k8s-by-kubeadm/3.k8s-install.md
+++ b/k8s-install/k8s-by-kubeadm/3.k8s-install.md
@@ -89,10 +89,11 @@ kubeadm init \
  --cri-socket /run/containerd/containerd.sock \
  --apiserver-advertise-address=192.168.34.2
  ```
- 
+
 ### Set alias for practice
 ```shell
 $ vim .bashrc
 (add this alias)
+alias k='kubectl'
 alias ks='kubectl -n kube-system'
 ```
